Fix line height on subtitle on small screens

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -30,6 +30,7 @@ body > header {
     color: $subtitle-color;
     font-family: $header-subtitle-font-family;
     font-weight: normal;
+    line-height: 1.6em;
     margin: .2em 0 0;
   }
 }
